[project]
name = "complexity-global-school"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "beautifulsoup4>=4.14.2",
    "catboost>=1.2.8",
    "datasets>=4.4.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "polars>=1.35.1",
    "python-dotenv>=1.2.1",
    "python-tmx>=0.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
